Fix “Alignment” and “Decoration” settings to properly display

--- a/styles.css
+++ b/styles.css
@@ -110,11 +110,46 @@
     display: block;
     position: relative;
     width: 100%;
-    height: 24px;
     box-sizing: border-box;
     border-top: none;
     border: none;
     background-color: transparent;
+    padding:2px 0px;
+}
+
+#roadmap-phase-container .roadmap-phase .roadmap-cycle .left {
+    width: max-content;
+    margin-right: auto;
+}
+
+#roadmap-phase-container .roadmap-phase .roadmap-cycle .center {
+    width: max-content;
+    margin-inline: auto;
+}
+
+#roadmap-phase-container .roadmap-phase .roadmap-cycle .right {
+    width: max-content;
+    margin-left: auto;
+}
+
+#roadmap-phase-container .roadmap-phase .roadmap-cycle .line {
+    border-top: 2px solid #ddd;
+    padding: 2px 10px;
+    margin-top: 4px;
+}
+
+#roadmap-phase-container .roadmap-phase .roadmap-cycle .bracket {
+    background-image: linear-gradient(#ddd, #ddd),
+                      linear-gradient(#ddd, #ddd),
+                      linear-gradient(#ddd, #ddd),
+                      linear-gradient(#ddd, #ddd);
+    background-repeat: no-repeat;
+    background-size: 8px 2px;
+    background-position: top left, top right, bottom left, bottom right;
+    border: solid #ddd;
+    border-width: 0 2px;
+    padding: 2px 10px;
+    margin-top: 4px;
 }
 
 #roadmap-phase-container .roadmap-phase .roadmap-cycle .roadmap-topic-row .roadmap-topic-container {
@@ -129,7 +164,6 @@
 }
 
 #roadmap-phase-container .roadmap-phase .roadmap-cycle .roadmap-topic-row .roadmap-topic-container .title {
-    vertical-align: bottom;
     font-size: 12px;
     color: #000;
     padding-right: 3px;
@@ -140,7 +174,6 @@
     color: #000;
     font-size: 12px;
     font-family: sans-serif;
-    vertical-align: bottom;
 }
 
 /* -- Phase -- Cycle -- Step */
